--- a/app/src/main/res/layout/item_food.xml
+++ b/app/src/main/res/layout/item_food.xml
@@ -15,6 +15,7 @@
             android:id="@+id/item_photo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="100dp"
             android:padding="8dp"
             android:scaleType="center"
             tools:src="@color/colorAccent" />
